--- a/nucampsite/package.json
+++ b/nucampsite/package.json
@@ -11,7 +11,9 @@
     "bootstrap-social": "5.1.1",
     "font-awesome": "4.7.0",
     "lodash": "^4.17.21",
+    "prop-types": "15.7.2",
     "react": "^17.0.2",
+    "react-animation-components": "3.0.0",
     "react-dom": "^17.0.2",
     "react-popper": "1.3.6",
     "react-redux": "7.2.0",
